# mcp_tunnel

./: Cargo.toml  README.md
mc-pkt-parse/: Cargo.toml
mc-pkt-parse/src/: main.rs
minecraft_protocol/: Cargo.toml
minecraft_protocol/src/: encrypted_stream.rs  lib.rs  packet.rs  ser.rs  varint.rs
minecraft_protocol_derive/: Cargo.toml
minecraft_protocol_derive/src/: lib.rs
packet_logger/: Cargo.toml
packet_logger/src/: main.rs
src/: cli.rs  client.rs  honeypot.rs  lib.rs  main.rs  packets.rs  server.rs  temp_server.rs
