[package]
name = "mcp_tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
minecraft_protocol = { git = "https://github.com/kauri-off/minecraft_protocol.git" }
serde_json = "1.0.140"
rsa = "0.9.8"
rand = "0.9.1"
openssl = "0.10.73"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
async-encrypted-stream = "0.1.2"
chacha20poly1305 = { version = "0.10.1", features = ["stream", "std"] }
hex = "0.4.3"
sha1 = "0.10.6"
md5 = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }